// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Empty /> should render button anc call its function 1`] = `
<div
  button="[object Object]"
  class="flex flex-col items-center justify-center gap-6 min-h-[calc(100vh_-_30rem)]"
  description="Page not found"
  title="Oops!"
>
  <svg
    class="lucide lucide-rat"
    data-testid="Rat"
    fill="none"
    height="80"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
    viewBox="0 0 24 24"
    width="80"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 22H4a2 2 0 0 1 0-4h12"
    />
    <path
      d="M13.236 18a3 3 0 0 0-2.2-5"
    />
    <path
      d="M16 9h.01"
    />
    <path
      d="M16.82 3.94a3 3 0 1 1 3.237 4.868l1.815 2.587a1.5 1.5 0 0 1-1.5 2.1l-2.872-.453a3 3 0 0 0-3.5 3"
    />
    <path
      d="M17 4.988a3 3 0 1 0-5.2 2.052A7 7 0 0 0 4 14.015 4 4 0 0 0 8 18"
    />
  </svg>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <h1
      class="text-3xl font-bold"
    >
      Oops!
    </h1>
    <p
      class="text-zinc-400"
    >
      Page not found
    </p>
  </div>
  <button
    class="flex items-center gap-1 text-white font-medium h-[40px] px-4 rounded-md w-fit transition-colors duration-200 group disabled:text-zinc-600 disabled:cursor-default disabled:border-zinc-600 bg-transparent border-2 border-white hover:border-link hover:text-link disabled:pointer-events-none"
    variant="secondary"
  >
    Back to list
  </button>
</div>
`;

exports[`<Empty /> should render successfully 1`] = `
<div
  class="flex flex-col items-center justify-center gap-6 min-h-[calc(100vh_-_30rem)]"
  description="Page not found"
  title="Oops!"
>
  <svg
    class="lucide lucide-rat"
    data-testid="Rat"
    fill="none"
    height="80"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
    viewBox="0 0 24 24"
    width="80"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 22H4a2 2 0 0 1 0-4h12"
    />
    <path
      d="M13.236 18a3 3 0 0 0-2.2-5"
    />
    <path
      d="M16 9h.01"
    />
    <path
      d="M16.82 3.94a3 3 0 1 1 3.237 4.868l1.815 2.587a1.5 1.5 0 0 1-1.5 2.1l-2.872-.453a3 3 0 0 0-3.5 3"
    />
    <path
      d="M17 4.988a3 3 0 1 0-5.2 2.052A7 7 0 0 0 4 14.015 4 4 0 0 0 8 18"
    />
  </svg>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <h1
      class="text-3xl font-bold"
    >
      Oops!
    </h1>
    <p
      class="text-zinc-400"
    >
      Page not found
    </p>
  </div>
</div>
`;
